--- a/civo/echo.yml
+++ b/civo/echo.yml
@@ -1,7 +1,13 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: echo
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: echo
+  namespace: echo
 spec:
   ports:
   - port: 80
@@ -13,6 +19,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: echo
+  namespace: echo
 spec:
   selector:
     matchLabels:
@@ -35,16 +42,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: echo-ingress
+  namespace: echo
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     kubernetes.io/ingress.class: "traefik"
 spec:
   tls:
   - hosts:
-    - echo.ldkube.io
+    - echo.ldkube.com
     secretName: echo-tls
   rules:
-  - host: echo.ldkube.io
+  - host: echo.ldkube.com
     http:
         paths:
         - pathType: Prefix
