--- a/civo/datadog-values-civo-01.yaml
+++ b/civo/datadog-values-civo-01.yaml
@@ -96,7 +96,7 @@ datadog:
   ## * Overall length should not be higher than 80 characters.
   ## Compared to the rules of GKE, dots are allowed whereas they are not allowed on GKE:
   ## https://cloud.google.com/kubernetes-engine/docs/reference/rest/v1beta1/projects.locations.clusters#Cluster.FIELDS.name
-  clusterName: civo
+  clusterName: civo-01
 
   # datadog.site -- The site of the Datadog intake to send Agent data to.
   # (documentation: https://docs.datadoghq.com/getting_started/site/)
@@ -801,7 +801,7 @@ clusterAgent:
   tokenExistingSecret: ""
 
   # clusterAgent.replicas -- Specify the of cluster agent replicas, if > 1 it allow the cluster agent to work in HA mode.
-  replicas: 1
+  replicas: 2
 
   # clusterAgent.revisionHistoryLimit -- The number of old ReplicaSets to keep in this Deployment.
   revisionHistoryLimit: 10
@@ -1028,7 +1028,7 @@ clusterAgent:
   datadog_cluster_yaml: {}
 
   # clusterAgent.createPodDisruptionBudget -- Create pod disruption budget for Cluster Agent deployments
-  createPodDisruptionBudget: false
+  createPodDisruptionBudget: true
 
   networkPolicy:
     # clusterAgent.networkPolicy.create -- If true, create a NetworkPolicy for the cluster agent.
